Updated layout components

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -10,8 +10,5 @@
         <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
         <title>Welcome to DevLink</title>
     </head>
-    <body>
-        <noscript>You need to enable JavaScript to run this app.</noscript>
-        <div id="root"></div>
-    </body>
+    <body id="root"></body>
 </html>
