Made progress on the home page

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -10,5 +10,7 @@
         <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
         <title>Welcome to DevLink</title>
     </head>
-    <body id="root"></body>
+    <body>
+        <div id="root"></div>
+    </body>
 </html>
