Updated meta tags and og-image

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -1,24 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <meta
-            name="description"
-            content="DevLink is the perfect place to network with like-minded developers and take your career in development to the next level"
-        />
-        <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
-        <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-        <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
-        <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
-        <link rel="manifest" href="/site.webmanifest" />
-        <link rel="manifest" href="/manifest.json" />
-        <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5" />
-        <meta name="msapplication-TileColor" content="#2d89ef" />
-        <meta name="theme-color" content="#ffffff" />
-        <title>DevLink</title>
-    </head>
-    <body>
-        <div id="root"></div>
-    </body>
+
+<head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta itemProp="name" content="DevLink" />
+    <meta itemProp="image" content="https://d-link.herokuapp.com/og-image.png" />
+    <meta name="description"
+        content="DevLink is the perfect place to network with like-minded developers and take your career in development to the next level" />
+    <meta property="og:title" content="DevLink" />
+    <meta property="og:description"
+        content="DevLink is the perfect place to network with like-minded developers and take your career in development to the next level" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://d-link.herokuapp.com" />
+    <meta property="og:site_name" content="DevLink" />
+    <meta property="og:image" content="https://d-link.herokuapp.com/og-image.png" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta property="og:image:type" content="image/png" />
+    <meta property="og:locale" content="en-GB" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:url" content="https://d-link.herokuapp.com" />
+    <meta name="twitter:site" content="@bradypp" />
+    <meta name="twitter:creator" content="@bradypp" />
+    <meta name="twitter:title" content="DevLink" />
+    <meta name="twitter:description"
+        content="DevLink is the perfect place to network with like-minded developers and take your career in development to the next level" />
+    <meta name="twitter:image" content="https://d-link.herokuapp.com/og-image.png" />
+    <meta name="twitter:image:alt" content="DevLink" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="manifest" href="/site.webmanifest" />
+    <link rel="manifest" href="/manifest.json" />
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5" />
+    <meta name="msapplication-TileColor" content="#2d89ef" />
+    <meta name="theme-color" content="#ffffff" />
+    <title>DevLink</title>
+</head>
+
+<body>
+    <div id="root"></div>
+</body>
+
 </html>
