chore: update site base url

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -12,7 +12,7 @@
     <meta property="og:description"
         content="DevLink is the perfect place to network with like-minded developers and take your career in development to the next level" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://d-link.herokuapp.com" />
+    <meta property="og:url" content="https://dev-link-7f7h.onrender.com" />
     <meta property="og:site_name" content="DevLink" />
     <meta property="og:image" content="https://dev-link-7f7h.onrender.comog-image.png" />
     <meta property="og:image:width" content="1200" />
@@ -20,7 +20,7 @@
     <meta property="og:image:type" content="image/png" />
     <meta property="og:locale" content="en-GB" />
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:url" content="https://d-link.herokuapp.com" />
+    <meta name="twitter:url" content="https://dev-link-7f7h.onrender.com" />
     <meta name="twitter:site" content="@bradypp" />
     <meta name="twitter:creator" content="@bradypp" />
     <meta name="twitter:title" content="DevLink" />
