chore: update site base url

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta itemProp="name" content="DevLink" />
-    <meta itemProp="image" content="https://dev-link-7f7h.onrender.comog-image.png" />
+    <meta itemProp="image" content="https://dev-link-7f7h.onrender.com/og-image.png" />
     <meta name="description"
         content="DevLink is the perfect place to network with like-minded developers and take your career in development to the next level" />
     <meta property="og:title" content="DevLink" />
@@ -14,7 +14,7 @@
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://dev-link-7f7h.onrender.com" />
     <meta property="og:site_name" content="DevLink" />
-    <meta property="og:image" content="https://dev-link-7f7h.onrender.comog-image.png" />
+    <meta property="og:image" content="https://dev-link-7f7h.onrender.com/og-image.png" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
     <meta property="og:image:type" content="image/png" />
@@ -26,7 +26,7 @@
     <meta name="twitter:title" content="DevLink" />
     <meta name="twitter:description"
         content="DevLink is the perfect place to network with like-minded developers and take your career in development to the next level" />
-    <meta name="twitter:image" content="https://dev-link-7f7h.onrender.comog-image.png" />
+    <meta name="twitter:image" content="https://dev-link-7f7h.onrender.com/og-image.png" />
     <meta name="twitter:image:alt" content="DevLink" />
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
